# JImageHash

./: .gitignore  WORKSPACE
src/main/: BUILD.bazel
src/main/java/dev/brachtendorf/jimagehash/hash/: FuzzyHash.java  Hash.java  HashUtil.java
src/main/java/dev/brachtendorf/jimagehash/hashAlgorithms/: AverageColorHash.java  AverageHash.java  AverageKernelHash.java  DifferenceHash.java  HashingAlgorithm.java  MedianHash.java  PerceptiveHash.java  RotAverageHash.java  RotPHash.java  WaveletHash.java
src/main/java/dev/brachtendorf/jimagehash/hashAlgorithms/filter/: Filter.java  Kernel.java  MedianKernel.java  ScharrFilter.java  SobelFilter.java
src/main/java/dev/brachtendorf/jimagehash/matcher/cached/: ConsecutiveMatcher.java  CumulativeMatcher.java
src/main/java/dev/brachtendorf/jimagehash/matcher/categorize/: AbstractCategoricalMatcher.java  CategoricalImageMatcher.java  CategoricalMatcher.java  KMeansClassifier.java
src/main/java/dev/brachtendorf/jimagehash/matcher/exotic/: BloomFilter.java  SingleImageMatcher.java
src/main/java/dev/brachtendorf/jimagehash/matcher/persistent/: ConsecutiveMatcher.java  CumulativeMatcher.java  PersistentImageMatcher.java  PersitentBinaryTreeMatcher.java
src/test/java/dev/brachtendorf/jimagehash/: TestResources.java
