android_library(
    name = "jimagehash",
    srcs = glob(["**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:dev_brachtendorf_pcg_java_10",
        "@maven//:com_github_wendykierp_JTransforms",
        "@dev_brachtendorf_UtilityCode//src/main:utilitycode",
    ],
)
